--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
+    "sass": "^1.77.8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
