--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint": "next lint",
     "format": "next lint --fix && prettier '**/*.{json,yaml}' --write --ignore-path .gitignore",
     "check-types": "tsc --noEmit --pretty",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out -t true"
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "gh-pages": "^6.1.1",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
